# rust_os_test

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs  serial.rs  test.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
