[package]
name = "rust_os_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.22"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
volatile = "0.2.7"
spin = "0.5.2"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-nographic"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 5            # seconds

[[test]]
name = "should_panic"
harness = false